fix: qr code overlapping card on safari

--- a/src/web/scss/components/card.scss
+++ b/src/web/scss/components/card.scss
@@ -90,6 +90,7 @@
     width: var(--monkeyWidth);
     height: 100%;
     margin: auto;
+    filter: drop-shadow(rem(1) rem(1) rem(2) rgba(0, 0, 0, .5));
   }
 
   &__qr-code {
@@ -101,6 +102,7 @@
     svg {
 
       width: auto;
+      max-width: 100%;
       height: 100%;
       border-bottom-right-radius: var(--basePadding);
     }
